# superzent

./: .gitignore  .rules  CONTRIBUTING.md  Cargo.toml  README.md
.github/: CODEOWNERS.hold
.github/workflows/: autofix_pr.yml  bump_patch_version.yml  cherry_pick.yml  compare_perf.yml  danger.yml  deploy_cloudflare.yml  extension_bump.yml  extension_tests.yml  extension_workflow_rollout.yml  publish_extension_cli.yml  release.yml  run_agent_evals.yml  run_bundling.yml  run_cron_unit_evals.yml  run_tests.yml  run_unit_evals.yml
assets/keymaps/: default-linux.json  default-macos.json  default-windows.json
assets/settings/: default.json
crates/acp_thread/src/: mention.rs
crates/agent_ui/src/: agent_ui.rs  external_tabs.rs  thread_history.rs
crates/assets/src/: assets.rs
crates/auto_update/src/: auto_update.rs
crates/auto_update_helper/src/: updater.rs
crates/channel/src/: channel_store.rs
crates/cli/: README.md
crates/cli/src/: main.rs
crates/client/src/: client.rs  zed_urls.rs
crates/copilot/src/: copilot.rs
crates/debugger_ui/src/: debugger_panel.rs  new_process_modal.rs
crates/edit_prediction/src/: edit_prediction.rs
crates/edit_prediction_ui/: Cargo.toml
crates/edit_prediction_ui/src/: edit_prediction_button.rs  edit_prediction_ui.rs  provider_policy.rs
crates/editor/src/: editor.rs
crates/explorer_command_injector/: AppxManifest-Nightly.xml  AppxManifest-Preview.xml  AppxManifest.xml
crates/explorer_command_injector/src/: explorer_command_injector.rs
crates/git_ui/: Cargo.toml
crates/git_ui/src/: commit_modal.rs  git_panel.rs  project_diff.rs
crates/gpui/src/: app.rs  platform.rs
crates/gpui_macos/src/: platform.rs
crates/icons/src/: icons.rs
crates/inspector_ui/src/: inspector.rs
crates/install_cli/src/: install_cli_binary.rs  register_zed_scheme.rs
crates/json_schema_store/src/: json_schema_store.rs
crates/language_models/src/: language_models.rs
crates/language_tools/: Cargo.toml
crates/language_tools/src/: lsp_log_view.rs
crates/notifications/: Cargo.toml
crates/notifications/src/: notification_store.rs
crates/onboarding/src/: multibuffer_hint.rs  onboarding.rs
crates/open_router/src/: open_router.rs
crates/paths/src/: paths.rs
crates/project/src/: terminals.rs  worktree_store.rs
crates/recent_projects/src/: recent_projects.rs  remote_connections.rs  remote_servers.rs
crates/release_channel/src/: lib.rs
crates/remote/src/: transport.rs
crates/settings/src/: settings_store.rs  vscode_import.rs
crates/settings_content/src/: language.rs  workspace.rs
crates/settings_ui/: Cargo.toml
crates/settings_ui/src/: components.rs  page_data.rs  pages.rs  settings_ui.rs
crates/settings_ui/src/components/: input_field.rs  section_items.rs
crates/settings_ui/src/pages/: audio_input_output_setup.rs  audio_test_window.rs  edit_prediction_provider_setup.rs  superzet_agent_presets.rs  tool_permissions_setup.rs
crates/superzed_agent/: Cargo.toml
crates/superzed_agent/src/: lib.rs
crates/superzed_git/: Cargo.toml
crates/superzed_git/src/: lib.rs
crates/superzed_model/: Cargo.toml
crates/superzed_model/src/: lib.rs
crates/superzed_ui/: Cargo.toml
crates/superzed_ui/src/: lib.rs
crates/superzent_agent/src/: runtime.rs
crates/superzent_git/src/: lib.rs
crates/superzent_model/src/: lib.rs
crates/superzent_ui/: Cargo.toml
crates/superzent_ui/src/: lib.rs  pending_keystroke_indicator.rs
crates/superzet_model/src/: lib.rs
crates/superzet_ui/: Cargo.toml
crates/superzet_ui/src/: lib.rs
crates/tasks_ui/src/: modal.rs
crates/terminal/src/: terminal.rs
crates/terminal_view/: Cargo.toml
crates/terminal_view/src/: terminal_panel.rs  terminal_view.rs
crates/title_bar/: Cargo.toml
crates/title_bar/src/: resource_monitor.rs  title_bar.rs  title_bar_settings.rs
crates/util/src/: util.rs
crates/workspace/src/: multi_workspace.rs  pane.rs  security_modal.rs  status_bar.rs  (+2 more)
crates/zed/: Cargo.toml  build.rs
crates/zed/resources/: zed.desktop.in
crates/zed/resources/flatpak/: manifest-template.json  zed.metainfo.xml.in
crates/zed/resources/info/: DocumentTypes.plist  Permissions.plist
crates/zed/resources/snap/: snapcraft.yaml.in
crates/zed/resources/windows/: zed.iss  zed.sh
crates/zed/src/: main.rs  visual_test_runner.rs  zed.rs
crates/zed/src/zed/: app_menus.rs  edit_prediction_registry.rs  mac_only_instance.rs  open_listener.rs  open_url_modal.rs  quick_action_bar.rs  visual_tests.rs  windows_only_instance.rs
docs/: AGENTS.md
docs/brainstorms/: 2026-04-03-macos-dock-recent-folders-setting-requirements.md  2026-04-03-managed-terminal-notifications-always-mode-requirements.md  2026-04-03-workspace-attention-and-open-state-requirements.md  2026-04-05-default-build-next-edit-requirements.md  2026-04-06-managed-workspace-lifecycle-config-requirements.md  2026-04-10-managed-workspace-lifecycle-compaction-requirements.md  2026-04-15-center-pane-footer-statusbar-merge-requirements.md  2026-04-15-workspace-creation-preset-control-requirements.md
docs/plans/: 2026-04-03-001-fix-macos-dock-recent-folders-plan.md  2026-04-03-001-fix-workspace-attention-open-state-plan.md  2026-04-03-002-fix-managed-terminal-notifications-always-mode-plan.md  2026-04-05-001-feat-default-build-next-edit-plan.md  2026-04-06-001-feat-managed-workspace-lifecycle-config-plan.md  2026-04-09-001-fix-managed-workspace-lifecycle-review-findings-plan.md  2026-04-10-001-refactor-managed-workspace-lifecycle-compaction-plan.md  2026-04-13-001-fix-managed-workspace-field-level-default-saves-plan.md  2026-04-15-001-feat-workspace-creation-preset-control-plan.md  2026-04-15-001-refactor-center-pane-footer-statusbar-merge-plan.md  2026-04-16-001-fix-workspace-creation-review-findings-plan.md
docs/src/: SUMMARY.md  development.md  getting-started.md  installation.md  macos.md  managed-workspace-lifecycle.md  uninstall.md  update.md
script/: bundle-windows.ps1  check-local-ci  generate-terms-rtf  upstream-agent-ui-candidates
script/flatpak/: bundle-flatpak
script/terms/: terms.md  terms.rtf
(+31 files in other folders)
