[package]
name = "settings_ui"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/settings_ui.rs"

[features]
default = []
ai = [
    "dep:agent",
    "dep:agent_settings",
    "dep:codestral",
    "dep:copilot",
    "dep:copilot_ui",
    "dep:edit_prediction",
    "dep:edit_prediction_ui",
]
test-support = ["ai"]

[dependencies]
agent = { workspace = true, optional = true }
agent_settings = { workspace = true, optional = true }
anyhow.workspace = true
component.workspace = true
codestral = { workspace = true, optional = true }
copilot = { workspace = true, optional = true }
copilot_ui = { workspace = true, optional = true }
edit_prediction = { workspace = true, optional = true }
edit_prediction_ui = { workspace = true, optional = true }
editor.workspace = true
fs.workspace = true
futures.workspace = true
fuzzy.workspace = true
gpui.workspace = true
heck.workspace = true
itertools.workspace = true
language.workspace = true
log.workspace = true
menu.workspace = true
paths.workspace = true
picker.workspace = true
regex.workspace = true
platform_title_bar.workspace = true
project.workspace = true
release_channel.workspace = true
schemars.workspace = true
search.workspace = true
serde.workspace = true
serde_json.workspace = true
settings.workspace = true
shell_command_parser.workspace = true
strum.workspace = true
superzet_model.workspace = true
telemetry.workspace = true
theme.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true
zed_actions.workspace = true

[dev-dependencies]
assets.workspace = true
client.workspace = true
fs = { workspace = true, features = ["test-support"] }
futures.workspace = true
gpui = { workspace = true, features = ["test-support"] }
language.workspace = true
node_runtime.workspace = true
paths.workspace = true
pretty_assertions.workspace = true
project = { workspace = true, features = ["test-support"] }
recent_projects = { workspace = true, features = ["test-support"] }
serde_json.workspace = true
session.workspace = true
settings = { workspace = true, features = ["test-support"] }
title_bar = { workspace = true, features = ["test-support"] }
workspace = { workspace = true, features = ["test-support"] }
zlog.workspace = true
