[package]
name = "superzed_git"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
superzed_model.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
