[package]
name = "superzet_model"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
gpui.workspace = true
log.workspace = true
paths.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
