[package]
name = "superzet_ui"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
editor.workspace = true
git_ui.workspace = true
gpui.workspace = true
log.workspace = true
menu.workspace = true
project.workspace = true
project_panel.workspace = true
superzet_git.workspace = true
superzet_agent.workspace = true
superzet_model.workspace = true
terminal_view.workspace = true
theme.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true
zed_actions.workspace = true
