[package]
name = "superzent_ui"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[features]
acp_tabs = ["dep:fs", "dep:schemars", "dep:serde"]

[dependencies]
agent_ui.workspace = true
anyhow.workspace = true
chrono.workspace = true
editor.workspace = true
fs = { workspace = true, optional = true }
git.workspace = true
git_ui.workspace = true
gpui.workspace = true
log.workspace = true
menu.workspace = true
project.workspace = true
project_panel.workspace = true
recent_projects.workspace = true
remote.workspace = true
schemars = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
settings.workspace = true
superzent_git.workspace = true
superzent_agent.workspace = true
superzent_model.workspace = true
task.workspace = true
terminal.workspace = true
terminal_view.workspace = true
ui.workspace = true
uuid.workspace = true
workspace.workspace = true
zed_actions.workspace = true
