[package]
name = "superzet_ui"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
editor.workspace = true
git.workspace = true
git_ui.workspace = true
gpui.workspace = true
log.workspace = true
menu.workspace = true
project.workspace = true
project_panel.workspace = true
recent_projects.workspace = true
remote.workspace = true
settings.workspace = true
smol.workspace = true
superzet_git.workspace = true
superzet_agent.workspace = true
superzet_model.workspace = true
terminal.workspace = true
terminal_view.workspace = true
ui.workspace = true
uuid.workspace = true
workspace.workspace = true
zed_actions.workspace = true
